--- a/lab2/index.html
+++ b/lab2/index.html
@@ -6,7 +6,7 @@
         <h1>JUAN JOSE TAYLOR RIOS</h1>
         <h2>Estudiante de Lic. en Desarrollo de Software</h2>
         <p>
-            <a href="https://github.com/JuanJTR/taylor-juan" target="_blank">link mi Git</a>
+            <a href="https://github.com/2022-SEMII-DESIV-G1/taylor-juan" target="_blank">link mi Git</a>
         </p>
        <p>
         <img width="500" height="500" src="gatosolo.JPG" alt="Imagen de Gato solo">
