--- a/lab4/parte2.html
+++ b/lab4/parte2.html
@@ -25,13 +25,12 @@
     
     <script>
       var formulario = document.getElementById('formulario');
-      formulario.addEventListener('submit',(e) =>
-      {
+      formulario.addEventListener('submit',(e) =>{
         e.preventDefault()
-        var email = document.getElementById('email').value;
-        var password = document.getElementById('password').value;
-        console.log("email: " + email);
-        console.log("password: " + password);
+        var eemail = document.getElementById('email').value;
+        var ppassword = document.getElementById('password').value;
+        console.log("email: " + eemail);
+        console.log("password: " + ppassword);
       }  )
       
     </script>
